--- a/style.css
+++ b/style.css
@@ -1,3 +1,53 @@
 .container{
     margin-bottom: 100px;
 }
+.orange-bg{
+    background-color: #FCEAE8;
+}
+.carousel-item{
+    padding: 20px 40px;
+}
+.price{
+    color: #FF136F;
+}
+.btn-color{
+    background-image: linear-gradient(to top, #FF1973, rgb(221, 76, 132) );
+    border: none;
+    padding: 8px 18px;
+    border-radius: 10px;
+}
+.category h1{
+    color: #fff;
+}
+.category img{
+    width: 120px;
+}
+.cat1, .cat2, .cat3{
+    padding: 10px 30px;
+    border-radius: 10px;
+}
+.cat1{
+    background-color: red;
+}
+.cat2{
+    background-color: blue;
+}
+.cat3{
+    background-color: green;
+}
+.card{
+    border: none;
+    box-shadow: 5px 5px 10px #ddd;
+    padding: 20px 10px;
+    border-radius: 10px;
+}
+.card-footer{
+    border-top: none;
+    background-color: #fff;
+}
+#subscribe{
+    height: 300px;
+}
+#subscribe p{
+    color: gray;
+}
